unpackaged/objects/lightningbuddy__Record_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>lightningbuddy__Action__c</fullName>
        <label>Action</label>
        <referenceTo>lightningbuddy__Actions__c</referenceTo>
        <relationshipLabel>Record Criteria</relationshipLabel>
        <relationshipName>Record_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Record Criteria</label>
    <nameField>
        <displayFormat>ARC-{000000}</displayFormat>
        <label>Record Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>